[gd_scene load_steps=8 format=3 uid="uid://b887pry8xnfh0"]

[ext_resource type="Script" path="res://Menus/ingame_menu.gd" id="1_8e4mf"]
[ext_resource type="Texture2D" uid="uid://qh3fuu56suky" path="res://Assets/Inhouse/UI elements/start.png" id="2_qbyhb"]
[ext_resource type="Texture2D" uid="uid://b14kdp4ahab8n" path="res://Assets/Inhouse/UI elements/start_pressed.png" id="3_spryj"]
[ext_resource type="Texture2D" uid="uid://cxd3bajtlrgpi" path="res://Assets/Inhouse/UI elements/credits.png" id="4_5ky57"]
[ext_resource type="Texture2D" uid="uid://cx83pukdxdpbb" path="res://Assets/Inhouse/UI elements/quit.png" id="4_bmm0v"]
[ext_resource type="Texture2D" uid="uid://kubhos2gtp31" path="res://Assets/Inhouse/UI elements/credits_pressed.png" id="5_8rapl"]
[ext_resource type="Texture2D" uid="uid://bxamhi7jv3klc" path="res://Assets/Inhouse/UI elements/quit_pressed.png" id="5_po6gq"]

[node name="Ingame_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_8e4mf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0.117647, 0.337255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -52.0
offset_right = 54.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="Resume" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_qbyhb")
texture_pressed = ExtResource("3_spryj")

[node name="Main Menu" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_5ky57")
texture_pressed = ExtResource("5_8rapl")

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("4_bmm0v")
texture_pressed = ExtResource("5_po6gq")

[connection signal="button_up" from="VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
